   structured
-- to have a record apply to all users use the ALL_USERS userGroupId that
   all users are automatically a member of
-- for migrating other data a user will have to be a member of a group and
   that group can be a single-user group or you can simplify existing data
   by consolidating users into groups that have the same subscreens

Bug Fixes:

- Fixed bug where secondary sequenced ID (setSequencedIdSecondary() method)
  was not finding IDs of existing records causing conflicting IDs to be
  generated
- Fixed bug with EntityFindBase.updateAll() to not use EntityListIterator
  as it caused problems trying to update records with the ResultSet open
- Added support for @confirmation attribute for hidden-form type links
- Fixed issue where transition.path-parameter values were not making it
  into the context since parameters were already added to the context
- Fixed issue in Data View screen with related entities using the full
  entity name (name with package)
- Updated startup in embedded mode to put jar files in a local temporary
  directory and build files to delete it just in case it doesn't get
  cleaned up on exit; should solve problem with dirty exit leaving temp
  files in the OS temporary file location which can be hard to find
- Fixed JCR repository connection, using RMI instead of DavEx by default
  (requires fewer jars for client while retaining full functionality)
- Fixed repository name and content path reference for JCR content in the
  ContentResourceReference class
- Fixed file upload temporary file being deleted before being accessed/used
- Fixed link with link-type=hidden-form within a form-single to not produce
  HTML with nested form elements
- Fixed anonymous-all and anonymous-view authenticate options for services
  and screens to login as the _NA_ user so the called services requiring
  authentication and permission will run as expected
- Fixed display.@currency-unit-field attribute handling