@@ -44,11 +44,14 @@ public class JavaServiceRunner implements ServiceRunner {
         ContextStack cs = (ContextStack) ec.context
         Map<String, Object> result
         try {
+            // push the entire context to isolate the context for the service call
+            cs.pushContext()
+            // we have an empty context so add the ec
+            cs.put("ec", ec)
+            // now add the parameters to this service call
             cs.push(parameters)
             // push again to get a new Map that will protect the parameters Map passed in
             cs.push()
-            // ec is already in place, in the contextRoot, so no need to put here
-            // context is handled by the ContextStack itself, always there
 
             Class c = (Class) classCache.get(sd.location)
             if (!c) {
@@ -80,9 +83,8 @@ public class JavaServiceRunner implements ServiceRunner {
         } catch (Throwable t) {
             throw new ServiceException("Error or unknown exception in service [${sd.serviceName}]", t)
         } finally {
-            // in the push we pushed two Maps to protect the parameters Map, so pop twice
-            cs.pop()
-            cs.pop()
+            // pop the entire context to get back to where we were before isolating the context with pushContext
+            cs.popContext()
         }
 
         return result
